feat(FileImageService): simplify code